# caffairs-test

./: .gitignore  Dockerfile  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
eye/: settings.py  urls.py
