[tool.poetry]
name = "theeye"
version = "0.1.0"
description = ""
authors = ["Luis Orduz <lo@luord.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
